2006-10-16  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Use /people/ here as well.

2006-09-15  Danilo Šegan  <danilo@gnome.org>

	* releases.py (Releases.list_modules): Check for description key
	before blindly setting it.

2006-07-31  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.generate_translated_docs): Use
	sourcedir/docbase instead of docdir.

2006-07-30  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Check for maintainer key.

2006-07-21  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.check_lang_support): Check if line is non-empty.

2006-04-20  Danilo Šegan  <danilo@gnome.org>

	* view-module.py (compare_stats): Check if 'supportedness' is available.

2006-03-14  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: branch fast-user-switch, metacity.

2006-03-13  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: branch evince, eog, zenity.

	* update-stats.py (LocStatistics.ui_l10n_stats): Use hidden languages when updating.
	* view-module.py (get_stats_for): List hidden languages in modules as well.

2006-03-13  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: branch epiphany, deskbar-applet, yelp, gucharmap.
	* gnome-modules.xml.in: Branch epiphany.

2006-03-11  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Add base tags.

	* releases.xml.in: Branch libbonobo.

2006-03-11  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: Fix modules.

	* gnome-modules.xml.in: Added gnome-applets, sabayon, pesselus.

	* releases.xml.in: Complete desktop, developer-libs sections.

	* update-stats.py (LocStatistics.check_lang_support): 
	Correct debug output.

== Release 0.9 ==
	
2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* INSTALL (INSTALL): Small update.

	* Makefile (FILES): Updated.

	* update-stats.py (LocStatistics.__init__): 
	Use modules.CvsModule(module, 1) so checkouts are done.

	* defaults.py (WEBDEBUG): Disable for release.
