@@ -1,3 +1,7 @@
+2006-12-15  Danilo Šegan  <danilo@gnome.org>
+
+	* modules.py (XmlModules.__init__): Use module ID for filename.
+
 2006-10-16  Danilo Šegan  <danilo@gnome.org>
 
 	* templates/module.tmpl: Use /people/ here as well.
